# Chat

./: .clang-format  .gitignore  README.md  format.sh
Client/: CMakeLists.txt  Client.cpp  build.sh  client.cpp  client.crt  client.h  main.cpp  run.sh
Client/include/: client.hpp
Client/src/: client.cpp  main.cpp
Common/: message.cpp  message.h
Common/include/: message.hpp
Common/src/: message.cpp
Include/: chat_message.hpp
Server/: CMakeLists.txt  Server.cpp  build.sh  dh2048.pem  run.sh  server.crt  server.key
Server/include/: participant.hpp  room.hpp  server.hpp  session.hpp
Server/src/: main.cpp  room.cpp  server.cpp  session.cpp
